# firefly-mv

./: .gitignore  11-ptgrey.rules  Makefile  Makefile.am  Makefile.ppz  README  camera.h  camls.c  color.c  config.h  configure.ac  firefly-mv-utils-gtk.pc.in  firefly-mv-utils-opencv.pc.in  firefly-mv-utils.pc.in  format7-playback-simple.c  format7-record-simple.c  grey.c  gtkutils.c  gtkutils.h  opencvutils.c  opencvutils.h  opencvview.c  play-color.c  play-gray.c  play-grey.c  play.c  pprz-parse-file.c  pprz-play.c  pprz-print-telemetry.c  pprz-record.c  pprz-to-image-files.c  ppzutils.c  ppzutils.h  record-bracketing.c  record-gray.c  record.c  save-to-images.c  serial.c  serial.h  show-color.c  (+7 more)
examples-libdc2/: Makefile  README  grabbayer.cpp  grabcolor.cpp  grabdx.cpp  grabform7.cpp  grabgrey.cpp  pgrutils.cpp  pgrutils.h
grabdma/: Makefile  README  conversions.cpp  grabcolor.cpp  grabdma.cpp  grabform7.cpp
john/: Makefile  config.h  grey.c
